# UnderwaterVehicleSimulator

./: LICENSE  README.md  initial_run.bash
auv_max/: CMakeLists.txt  package.xml
auv_max_bringup/: CMakeLists.txt  package.xml
auv_max_bringup/launch/: max_rviz.launch.py  max_sim.launch.py
auv_max_cartographer/: CMakeLists.txt  package.xml
auv_max_cartographer/config/: cartographer_config.lua
auv_max_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
auv_max_control_pos/: CMakeLists.txt  package.xml
auv_max_control_pos/include/auv_max_control_pos/: control_pitch.hpp  control_posxy.hpp  control_profundidad.hpp  control_yaw.hpp
auv_max_control_pos/src/: control_pitch.cpp  control_posxy.cpp  control_profundidad.cpp  control_yaw.cpp  pos_controller.cpp
auv_max_control_vel/: CMakeLists.txt  package.xml
auv_max_control_vel/src/: cmdvelToThrust.cpp  remapLaserScan.cpp  velRviz.cpp
auv_max_description/: CMakeLists.txt  package.xml
auv_max_description/rviz/: max_view.rviz
auv_max_description/urdf/: auv_max.xacro
auv_max_gazebo/: CMakeLists.txt  package.xml
auv_max_gazebo/models/auv_max/: model.config  model.sdf
auv_max_gazebo/models/sand_heightmap/: model.sdf
auv_max_gazebo/worlds/: sand.world
auv_max_graphics/: package.xml  setup.cfg  setup.py
auv_max_graphics/auv_max_graphics/scripts/: pid_mov_angular.py  pid_mov_lineal.py
auv_max_node/: CMakeLists.txt  package.xml
auv_max_node/include/auv_max_node/: cmd_vel_thrust_converter.hpp  gazebo_rviz_synchronizer.hpp  imu_topic_remapper.hpp  sonar_topic_remapper.hpp
auv_max_node/src/: cmd_vel_thrust_converter.cpp  gazebo_rviz_synchronizer.cpp  imu_topic_remapper.cpp  node_main.cpp  sonar_topic_remapper.cpp
auv_max_sonar/: CMakeLists.txt  package.xml
auv_max_sonar/include/auv_max_sonar/: sonar_obstacle_detector.hpp
auv_max_sonar/src/: sonar_obstacle_detector.cpp
auv_max_teleoperation/: CMakeLists.txt  package.xml
auv_max_teleoperation/scripts/: gui_teleop.py
auv_max_teleoperation/src/: rov_teleop_keyboard.cpp
auv_max_vision_opencv/: package.xml  setup.cfg  setup.py
auv_max_vision_opencv/auv_max_vision_opencv/scripts/: ball_detector.py
rov_altitude_control/: CMakeLists.txt  package.xml
rov_altitude_control/include/rov_altitude_control/: altitude_controller.hpp  longitud_controller.hpp
rov_altitude_control/src/: altitude_control_node.cpp  altitude_controller.cpp  longitud_controller.cpp
rov_bringup/: CMakeLists.txt  package.xml
rov_bringup/launch/: rov_rviz.launch.py  rov_sim.launch.py
rov_control_teleop/: package.xml  setup.cfg  setup.py
rov_control_teleop/rov_control_teleop/scripts/: graficar_pid_angular.py  graficar_pid_long.py  graficar_pid_movimientos.py  rov_teleop.py
rov_control_vel/: CMakeLists.txt  package.xml
rov_control_vel/include/rov_control_vel/: cmdvelToThrust.hpp
rov_control_vel/src/: cmdvelToThrust.cpp
rov_description/: CMakeLists.txt  package.xml
rov_description/launch/: loco_rviz.launch  rov_rviz.launch.py
rov_description/models/: model.config  model.sdf  model.sdf.in
rov_description/models/rov_max/: mi_modelo.sdf  model.config  model.sdf  model.sdf.in
rov_description/rviz/: max_view.rviz  urdf.rviz
rov_description/scripts/: generate_model.py
rov_description/src/: parser.cpp
rov_description/urdf/: loco.urdf.xacro  rov_max.urdf.xacro  rov_max.xacro
rov_description/worlds/: sand.world
rov_gazebo/: CMakeLists.txt  package.xml
rov_gazebo/models/rov_max/: mi_modelo.sdf
rov_gazebo/worlds/: sand.world
rov_robot/: CMakeLists.txt  package.xml
rov_teleop/: CMakeLists.txt  package.xml
rov_teleop/src/: rov_teleop_keyboard.cpp
rov_teleoperation/: CMakeLists.txt  package.xml
rov_teleoperation/include/rov_teleoperation/: control_pitch.hpp  control_posxy.hpp  control_profundidad.hpp  control_yaw.hpp  teleop_rov_max.hpp
rov_teleoperation/src/: control_pitch.cpp  control_posxy.cpp  control_profundidad.cpp  control_yaw.cpp  rov_teleoperacion.cpp  teleop_rov_max.cpp
