<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_max</name>
  <version>0.0.0</version>
  <description>AUV Max - Simulacion / Arquitectura de Software</description>
  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>auv_max_description</exec_depend>
  <exec_depend>auv_max_bringup</exec_depend>
  <exec_depend>auv_max_teleoperation</exec_depend>
  <exec_depend>auv_max_gazebo</exec_depend>
  <exec_depend>auv_max_node</exec_depend>
  <exec_depend>auv_max_control_vel</exec_depend>
  <exec_depend>auv_max_sonar</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>