<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_max_control_pos</name>
  <version>0.0.0</version>
  <description>Paquete encargado del control de posición del AUV, dicho paquete puede ser mejorado con un control con MPC</description>
  <maintainer email="iesusdavila@gmail.com">rov-robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
