<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_max_sonar</name>
  <version>0.0.0</version>
  <description>Paquete encargado de la deteccion de obstaculos mediante un sensor Sonar, permite a futuro implementar un algoritmo de navegación autonoma</description>
  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
