<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iesusdavila@gmail.com">rov-robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <!-- These are required to run, but I don't want to build them in the CI -->
  <!-- Ideally I would be able to install & use released versions -->
  <!--<exec_depend>ros_gz_bridge</exec_depend>-->
  <!--<exec_depend>ros_gz_image</exec_depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
