<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_robot</name>
  <version>0.0.0</version>
  <description>ROV robot - Simulacion/Implementacion</description>
  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>rov_description</exec_depend>
  <exec_depend>rov_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
