<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_teleoperation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iesusdavila@gmail.com">rov-robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend> 
  <build_depend>ncurses</build_depend>
  <build_export_depend>ncurses</build_export_depend>
  <exec_depend>ncurses</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
